--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -2,8 +2,8 @@ $gradienteVerde:#093028;  /* fallback for old browsers */
 $gradienteVerde:-webkit-linear-gradient(to right, #237A57, #093028);  /* Chrome 10-25, Safari 5.1-6 */
 $gradienteVerde:linear-gradient(to right, #237A57, #093028); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
 
-$colorPrincipal:#0F044C;
-$background: #141E61;
+$colorPrincipal:rgb(20,36,39);
+$background: $gradienteVerde;
 $colorFuente1:rgb(225, 229, 233);
 $colorFuente2:rgb(17,31,33);
 $colorCaja1:rgb(225,229,233);
